# teamlens-linux-agent

./: .dockerignore  .env.example  .gitignore  AGENT_AUTO_UPDATE.md  DEPLOYMENT.md  Dockerfile  README.md  clear-cache.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: linux-build.yml
scripts/: generate-updater-json.py
src/: App.css  App.tsx  liveScreen.ts  main.tsx  monitoring.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json  test.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  uia_test.rs
